Add Error 404 – File Not Found page, Custom sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Qndev
 logo: /assets/img/logo.jpg
-description: "#technology, #code, #Open Source, #linux, #java, #funny tech stories"
+description: "by Quang Nguyen"
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
