--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Qndev
-logo: /assets/img/logo.jpg
+title: Qndev's blog
+logo: /assets/img/my-image.jpg
 description: "by Quang Nguyen"
 show_downloads: true
 google_analytics:
